--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase-tools": "^3.19.3",
     "g": "^2.0.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
