--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^4.13.1",
     "firebase-tools": "^3.19.3",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
