--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "angular5-data-table": "^1.0.3",
     "angularfire2": "^5.0.0-rc.8.1-next",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
