--- a/tsconfig-json.backup.json
+++ b/tsconfig-json.backup.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -15,11 +15,6 @@
     "lib": [
       "es2017",
       "dom"
-    ],
-    "paths": {
-      "shared/*": [
-        "app/shared/*"
-      ]
-    }
+    ]
   }
 }
